tests/baselines/reference/declareExternalModuleWithExportAssignedFundule.errors.txt
declareExternalModuleWithExportAssignedFundule.ts(7,5): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== declareExternalModuleWithExportAssignedFundule.ts (1 errors) ====
    declare module "express" {
    
        export = express;
    
        function express(): express.ExpressServer;
    
        module express {
        ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
            export interface ExpressServer {
    
                enable(name: string): ExpressServer;
    
                post(path: RegExp, handler: (req: Function) => void ): void;
    
            }
    
            export class ExpressServerRequest {
    
            }
    
        }
    
    }
    